--- a/credito.html
+++ b/credito.html
@@ -385,7 +385,48 @@
                     <td id="a2"></td>
                     <td id="s2"></td>
                   </tr>
-
+                  <tr>
+                    <th scope="row">3</th>
+                    <td id="p3"></td>
+                    <td id="i3"></td>
+                    <td id="a3"></td>
+                    <td id="s3"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">4</th>
+                    <td id="p4"></td>
+                    <td id="i4"></td>
+                    <td id="a4"></td>
+                    <td id="s4"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5</th>
+                    <td id="p5"></td>
+                    <td id="i5"></td>
+                    <td id="a5"></td>
+                    <td id="s5"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6</th>
+                    <td id="p6"></td>
+                    <td id="i6"></td>
+                    <td id="a6"></td>
+                    <td id="s6"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">7</th>
+                    <td id="p7"></td>
+                    <td id="i7"></td>
+                    <td id="a7"></td>
+                    <td id="s7"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">8</th>
+                    <td id="p8"></td>
+                    <td id="i8"></td>
+                    <td id="a8"></td>
+                    <td id="s8"></td>
+                  </tr>
                 </tbody>
               </table>
 
